--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.2",
-        "symfony/framework-bundle": "^4.0"
+        "symfony/framework-bundle": "^4.0",
+        "symfony/console": "^4.0"
     },
 	"autoload": {
         "psr-4": {
