--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "require": {
         "php": "^7.2",
         "symfony/framework-bundle": "^4.0",
-        "symfony/console": "^4.0"
+        "symfony/console": "^4.0",
+        "symfony/dependency-injection": "^4.0",
+        "symfony/http-kernel": "^4.0"
     },
 	"autoload": {
         "psr-4": {
